subtask: fix close button color on mobile with color: inherit

--- a/modally.scss
+++ b/modally.scss
@@ -52,6 +52,7 @@
   cursor: pointer;
 
   background: transparent;
+  color: inherit;
 
 	position: absolute;
   top: 0px;
